# freefang-qt

./: MANIFEST.im  README.md  pyproject.toml  setup.py
freefang-qt/: game_creation.py  game_join.py  gameloop.py  main.py  net.py  packets.py  utils.py
freefang-qt/qml/: Create_Game.qml  Game_UI.qml  HunterKill.qml  HunterKillButton.qml  Join_Game.qml  ProtectorProtect.qml  SeerRevealButton.qml  VoteButton.qml  Werewolfvotebutton.qml  main.qml
freefang_qt/: cert.pem  data.py  game_creation.py  game_join.py  gameloop.py  main.py  net.py  packets.py
freefang_qt/qml/: ActionButton.qml  Create_Game.qml  Cupidinfatuate.qml  Game_UI.qml  HunterKill.qml  ProtectorProtect.qml  SeerReveal.qml  Vote.qml  Werewolfvote.qml  Witch_kill.qml  Witch_revive.qml  Witchpassturnbtn.qml  main.qml
